# 42-Common_Core

./: .gitmodules  born2b.txt  exam.py  maze.txt
amazeing/: a_maze_ing.py
amazing_prime/: a_maze_ing.py  config.txt  maze.txt  pyproject.toml  test.txt
amazing_prime/mazegen/: __init__.py  a_maze_ing.py
amazing_prime/mazegen.egg-info/: PKG-INFO  SOURCES.txt
amazing_prime/mlx/: mlx.py
born2b/: signature.txt
call-me-maybe/: Makefile  New Text Document.txt
codexion/: Makefile  README.md  a.out  arg_stuff.c  codexion.c  codexion.h  death_n_dongles.c  edf.c  heap_n_fifo.c  init_one.c  init_two.c  routine.c  utils.c
codexion (copy)/: a.out  codexion.c  codexion.h
fly_in/: Makefile  README.md  flyin.py
ft_printf/: Makefile  a.out  ft_printf.c  ft_printf.h  ft_putaddress.c  ft_putchar.c  ft_putnbr.c  ft_putnbr_base.c  ft_putstr_fd.c
ft_printf/libft/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_is_x.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  (+30 more)
get_next_line/: a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
python 00/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  ft_garden_summary.py  ft_harvest_total.py  ft_plot_area.py  ft_seed_inventory.py
python 06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python 07/: card_generator.py
python 08/ex1/: loading.py  pyproject.toml  requirements.txt
so_long2/: Makefile  main.c  map.ber  so_long  so_long.h
(+90 files in other folders)
