[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable depth-first maze generator"
authors = [
    { name = "Ruben Silva" },
    { name = "Gabriel Oliveira" }
]

readme = "README.md"
requires-python = ">=3.8"
dependencies = []
